data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_291.wast
;; 2. **Backward Branch with Operand Stack:**    Construct a loop with specific operand stack requirements and use the `br` instruction to jump back to the starting point of the loop. Ensure the operand stack is managed correctly and does not encounter an `unreachable` instruction due to improper operand handling or misinterpreted label index.

(assert_invalid
  (module
    (func $backward-branch-with-operand-stack
      (block
        (loop (result i32)
          (i32.const 1) 
          (br 0)
        )
      )
    )
  )
  "type mismatch"
)